Swet alert y Fetch

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     <h5 class="card-title">Usted ya cuenta con un prestamo solicitado</h5>
                     <p class="card-text" id="ptmonto"></p>
                     <p class="card-text" id="ptcuotas"></p>
+                    <p><button type="button" id="cancelarprestamo" class="btn btn-primary">Cancelar Préstamo</button></p>
                 </div>
             </div>
         </section>
@@ -165,13 +166,14 @@
         <div class="container">
            
             <p class="mb-1">
-                Simulador de Prréstamos - Entrega 2 - Aldo Iñiguez
+                Simulador de Préstamos - Entrega Final - Aldo Iñiguez
             </p>
             
         </div>
     </footer>
 
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/main.js"></script>
 </body>
 
